<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ensiklopedia"
    android:background="#fff"
    android:layout_gravity="bottom">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="160dp">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_page_monitoring"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_title_ensiklopedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ENSIKLOPEDIA"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="30dp"/>
                <TextView
                    android:id="@+id/tv_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:text="Apa itu ensiklopedia ?"
                    android:textColor="#fff"
                    android:layout_below="@id/tv_title_ensiklopedia"/>
                <TextView
                    android:id="@+id/tv_subtitle2"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:text="Pada ensiklopedia anda dapat melihat daftar penyakit ringan, saran menu makananan minuman dan olahraga yang sehat"
                    android:textColor="#fff"
                    android:textSize="11sp"
                    android:layout_below="@id/tv_subtitle"
                    android:justificationMode="inter_word"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_ensiklopedia_foreground"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"/>

            </RelativeLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_marginLeft="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_penyakit"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/background_color">
                    <androidx.cardview.widget.CardView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center_vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal|center_vertical">
                            <ImageView
                                android:id="@+id/iv_penyakit"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:src="@drawable/ic_penyakit_foreground"
                                android:tag="image_tag"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/tv_ePenyakit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/tv_ePenyakit"
                            android:fontFamily="sans-serif"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:textColor="#fff"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <TextView
                            android:id="@+id/tv_ePenyakitD"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/tv_ePenyakitD"
                            android:textColor="#fff"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_makanan"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        app:cardCornerRadius="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center_vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/background_color"
                            android:gravity="center_horizontal|center_vertical">
                            <ImageView
                                android:id="@+id/iv_makanan"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:src="@drawable/ic_makanan_foreground"
                                android:tag="image_tag"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_eMakanan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/tv_eMakanan"
                            android:fontFamily="sans-serif"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <TextView
                            android:id="@+id/tv_eMakananD"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/tv_eMakananD"
                            android:textColor="#000"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_olahraga"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="30dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/background_color">
                    <androidx.cardview.widget.CardView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center_vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal|center_vertical">
                            <ImageView
                                android:id="@+id/iv_olahraga"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:src="@drawable/ic_olahraga_foreground"
                                android:tag="image_tag"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/tv_eOlahraga"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/tv_eOlahraga"
                            android:fontFamily="sans-serif"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:textColor="#fff"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <TextView
                            android:id="@+id/tv_eOlahragaD"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/tv_eOlahragaD"
                            android:textColor="#fff"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>